name:                wyas
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ShuaiyiLiu/wyas#readme
license:             BSD3
license-file:        LICENSE
author:              Shuaiyi Liu
copyright:           2017 Shuaiyi Liu
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable wyas-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wyas
                     , parsec
                     , raw-strings-qq

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ShuaiyiLiu/wyas
